fix(ID-C012): Poor photo quality for the category block on mobile devices (#90)

--- a/src/components/Categories/CategoryOfDrones.module.scss
+++ b/src/components/Categories/CategoryOfDrones.module.scss
@@ -1,136 +1,132 @@
 @import '../../assets/sass-functions/functions';
 
 .main_title {
-    font-weight: 400;
-    line-height: 58.22px;
-    font-size: 30px;
+  font-weight: 400;
+  line-height: 58.22px;
+  font-size: 30px;
 
-    @media screen and (min-width: 768px) {
-        font-size: 48px;
-        margin: 30px 0 20px 0;
+  @media screen and (min-width: 768px) {
+    font-size: 48px;
+    margin: 30px 0 20px 0;
 
-        @media screen and (min-width: 1440px) {
-            font-size: 64px;
-        }
+    @media screen and (min-width: 1440px) {
+      font-size: 64px;
     }
+  }
 }
 
 $bg: #eaecf0;
 $border_active: #bafc50;
 
 .category {
+  display: flex;
+  justify-content: space-between;
+  gap: 17.71px;
+  border-radius: 20px;
+
+  &__tab {
+    border: 2px solid $bg;
+    max-width: 433px;
+    width: 100%;
+    height: 221px;
+    padding: 10px 10px 20px 10px;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    gap: 17.71px;
+    gap: 10px;
+    background-color: $bg;
     border-radius: 20px;
+    cursor: pointer;
+    text-align: center;
 
-    &__tab {
-        border: 2px solid $bg;
-        max-width: 433px;
-        width: 100%;
-        height: 221px;
-        padding: 10px 10px 20px 10px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        gap: 10px;
-        background-color: $bg;
-        border-radius: 20px;
-        cursor: pointer;
-
-        &--active {
-            border: 2px solid $border_active;
-        }
-
-        transition: filter 0.3s linear;
-
-        img {
-            transform: scale(1);
-            transition: transform 0.3s linear;
-        }
-
-        &:hover {
-            filter: brightness(0.95);
-
-            img {
-                transform: translate(-50%, -50%) scale(1.1);
-            }
-        }
-
-        >div {
-            flex-grow: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            position: relative;
-
-            img {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                transform: translate(-50%, -50%);
-
-                max-height: 158px;
-            }
-        }
-
-        >p {
-            font-size: rem(18px);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            white-space: nowrap;
-        }
+    &--active {
+      border: 2px solid $border_active;
     }
+
+    transition: filter 0.3s linear;
+
+    img {
+      transform: scale(1);
+      transition: transform 0.3s linear;
+    }
+
+    &:hover {
+      filter: brightness(0.95);
+
+      img {
+        transform: translate(-50%, -50%) scale(1.1);
+      }
+    }
+
+    >div {
+      flex-grow: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+
+      img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+        max-height: 158px;
+      }
+    }
+
+    >p {
+      font-size: rem(18px);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-wrap: nowrap;
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
-    .category {
-        gap: 10px;
+  .category {
+    gap: 10px;
 
-        &__tab {
-            max-height: 130px;
-            padding: 0 10px 10px 10px;
+    &__tab {
+      padding: 0 10px 10px 10px;
 
-            >p {
-                font-size: rem(16px);
-            }
-        }
+      >p {
+        font-size: rem(16px);
+      }
     }
+  }
 }
 
 @media screen and (max-width: 550px) {
-    .category {
-        gap: 5px;
+  .category {
+    gap: 5px;
 
-        &__tab {
-            border-radius: 15px;
-            padding: 0 10px 10px 10px;
+    &__tab {
+      border-radius: 15px;
+      padding: 0 10px 10px 10px;
 
-            >p {
-                font-size: rem(14px);
-            }
-        }
+      >p {
+        font-size: rem(14px);
+      }
     }
+  }
 }
 
-@media screen and (max-width: 450px) {
-    .category {
-        gap: 5px;
+@media screen and (max-width: 410px) {
+  .category {
+    gap: 5px;
 
-        &__tab {
-            gap: 5px;
-            border-radius: 10px;
-            padding: 0 10px 10px 10px;
+    &__tab {
+      height: 150px;
+      gap: 5px;
+      border-radius: 10px;
+      padding: 0 10px 10px 10px;
 
-            >div {
-                min-height: 95px;
-            }
-
-            >p {
-                font-size: rem(12px);
-                text-align: center;
-            }
-        }
+      >p {
+        font-size: rem(12px);
+      }
     }
+  }
 }
